--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,25 +1,18 @@
 cmake_minimum_required(VERSION 3.16)
-
 project(Wallet VERSION 1.0.0 LANGUAGES CXX)
-
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
 find_package(Qt6 REQUIRED COMPONENTS Core Quick)
-
+set(QT_QML_GENERATE_QMLLS_INI ON)
 qt_standard_project_setup()
-
 qt_add_executable(Wallet
  src/main.cpp
  src/include/wifimanager.h
  src/wifimanager.cpp
 )
-
-# Add include directories
 target_include_directories(Wallet PRIVATE
  src
 )
-
 qt_add_qml_module(Wallet
  URI WalletModule
  VERSION 1.0
@@ -33,13 +26,12 @@ qt_add_qml_module(Wallet
 		src/qml/pages/Settings.qml
 		src/qml/pages/SettingsSystem.qml
 		src/qml/pages/SettingsSystemWiFi.qml
+		src/qml/pages/FontDemo.qml
 )
-
 target_link_libraries(Wallet PRIVATE
  Qt6::Core
  Qt6::Quick
 )
-
 # Platform specific settings
 if(WIN32)
  set_property(TARGET Wallet PROPERTY WIN32_EXECUTABLE TRUE)
@@ -48,7 +40,6 @@ else()
  # Linux/Unix - set output name to lowercase
  set_target_properties(Wallet PROPERTIES OUTPUT_NAME "wallet")
 endif()
-
 # Set application properties
 set_target_properties(Wallet PROPERTIES
  MACOSX_BUNDLE_GUI_IDENTIFIER org.libersoft.matchbox-wallet
