--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
 	"editor.tabSize": 1,
 	"editor.insertSpaces": false,
 	"editor.formatOnSave": true,
+	"editor.detectIndentation": false,
 	"[cpp]": {
 		"editor.defaultFormatter": "ms-vscode.cpptools"
 	},
@@ -12,12 +13,28 @@
 		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
 	"[json]": {
-		"editor.defaultFormatter": "vscode.json-language-features",
+		"editor.defaultFormatter": "vscode.json-language-features"
 	},
 	"[jsonc]": {
-		"editor.defaultFormatter": "vscode.json-language-features",
+		"editor.defaultFormatter": "vscode.json-language-features"
 	},
 	"[qml]": {
-		"editor.defaultFormatter": null,
-	}
+		"editor.defaultFormatter": "theqtcompany.qt-qml",
+		"editor.formatOnSave": true,
+		"editor.formatOnType": true,
+		"editor.formatOnPaste": true,
+		"editor.autoIndent": "full",
+		"editor.tabSize": 1,
+		"editor.insertSpaces": false
+	},
+	"files.associations": {
+		"*.qml": "qml"
+	},
+	"qml.formatting.enabled": true,
+	"qml.formatting.indentSize": 1,
+	"qml.formatting.insertSpaces": false,
+	"qml.formatting.maximumBlankLines": 1,
+	"qml.linting.enabled": true,
+	"qml.formatter.path": "qmlformat",
+	"qml.server.enabled": true
 }
