--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ project(Wallet VERSION 1.0.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(Qt6 REQUIRED COMPONENTS Core Quick)
+find_package(Qt6 QUIET COMPONENTS Multimedia)
 set(QT_QML_GENERATE_QMLLS_INI ON)
 qt_standard_project_setup()
 qt_add_executable(Wallet
@@ -27,11 +28,21 @@ qt_add_qml_module(Wallet
 		src/qml/pages/SettingsSystem.qml
 		src/qml/pages/SettingsSystemWiFi.qml
 		src/qml/pages/PowerOff.qml
+		src/qml/pages/CameraPreview.qml
 )
 target_link_libraries(Wallet PRIVATE
  Qt6::Core
  Qt6::Quick
 )
+
+# Link Qt6::Multimedia if available
+if(TARGET Qt6::Multimedia)
+ target_link_libraries(Wallet PRIVATE Qt6::Multimedia)
+ target_compile_definitions(Wallet PRIVATE HAVE_QT_MULTIMEDIA)
+ message(STATUS "Qt6Multimedia found - camera support enabled")
+else()
+ message(WARNING "Qt6Multimedia not found - camera support disabled")
+endif()
 # Platform specific settings
 if(WIN32)
  set_property(TARGET Wallet PROPERTY WIN32_EXECUTABLE TRUE)
