--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,7 @@
 		"editor.defaultFormatter": "vscode.json-language-features"
 	},
 	"[qml]": {
-		"editor.defaultFormatter": "theqtcompany.qt-qml",
+		"editor.defaultFormatter": "Delgan.qml-format",
 		"editor.formatOnSave": true,
 		"editor.formatOnType": true,
 		"editor.formatOnPaste": true,
