--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,11 +32,21 @@
 	"files.associations": {
 		"*.qml": "qml"
 	},
+	"files.exclude": {
+		"**/*.qml~": true,
+		"**/*-formatting-tmp.qml~": true
+	},
+	"files.watcherExclude": {
+		"**/*.qml~": true,
+		"**/*-formatting-tmp.qml~": true
+	},
 	"qml.formatting.enabled": true,
 	"qml.formatting.indentSize": 1,
 	"qml.formatting.insertSpaces": false,
 	"qml.formatting.maximumBlankLines": 1,
 	"qml.linting.enabled": true,
 	"qml.formatter.path": "qmlformat",
-	"qml.server.enabled": true
+	"qml.server.enabled": true,
+	"qmlFormat.keepBackups": false,
+	"qmlFormat.createBackups": false
 }
