--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,50 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(Qt6 REQUIRED COMPONENTS Core Quick Svg)
 find_package(Qt6 QUIET COMPONENTS Multimedia)
+
+# Find Node.js for embedding
+find_path(NODEJS_INCLUDE_DIR 
+    NAMES node.h
+    HINTS /usr/include/node /usr/local/include/node /opt/homebrew/include/node
+    PATH_SUFFIXES nodejs node
+)
+
+find_library(NODEJS_LIBRARY 
+    NAMES node libnode
+    HINTS /usr/lib /usr/local/lib /opt/homebrew/lib
+    PATH_SUFFIXES x86_64-linux-gnu
+)
+
+find_library(V8_LIBRARY 
+    NAMES v8 libv8
+    HINTS /usr/lib /usr/local/lib /opt/homebrew/lib
+    PATH_SUFFIXES x86_64-linux-gnu
+)
+
+find_library(V8_LIBBASE_LIBRARY 
+    NAMES v8_libbase libv8_libbase
+    HINTS /usr/lib /usr/local/lib /opt/homebrew/lib
+    PATH_SUFFIXES x86_64-linux-gnu
+)
+
+find_library(V8_LIBPLATFORM_LIBRARY 
+    NAMES v8_libplatform libv8_libplatform
+    HINTS /usr/lib /usr/local/lib /opt/homebrew/lib
+    PATH_SUFFIXES x86_64-linux-gnu
+)
+
+find_library(UV_LIBRARY 
+    NAMES uv libuv
+    HINTS /usr/lib /usr/local/lib /opt/homebrew/lib
+    PATH_SUFFIXES x86_64-linux-gnu
+)
+
+if(NOT NODEJS_INCLUDE_DIR OR NOT NODEJS_LIBRARY)
+    message(FATAL_ERROR "Node.js development files not found. Please install nodejs-dev or libnode-dev package.")
+endif()
+
+message(STATUS "Found Node.js headers: ${NODEJS_INCLUDE_DIR}")
+message(STATUS "Found Node.js library: ${NODEJS_LIBRARY}")
 set(QT_QML_GENERATE_QMLLS_INI ON)
 qt_standard_project_setup()
 qt_add_executable(Wallet
@@ -12,10 +56,13 @@ qt_add_executable(Wallet
  src/wifimanager.cpp
  src/include/systemmanager.h
  src/systemmanager.cpp
+ src/include/node.h
+ src/node.cpp
 )
 
 target_include_directories(Wallet PRIVATE
  src
+ ${NODEJS_INCLUDE_DIR}
 )
 
 # Automatically find all QML files with relative paths
@@ -41,6 +88,11 @@ target_link_libraries(Wallet PRIVATE
  Qt6::Core
  Qt6::Quick
  Qt6::Svg
+ ${NODEJS_LIBRARY}
+ ${V8_LIBRARY}
+ ${V8_LIBBASE_LIBRARY}
+ ${V8_LIBPLATFORM_LIBRARY}
+ ${UV_LIBRARY}
 )
 
 # Link Qt6::Multimedia if available
