--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,6 +74,9 @@ file(GLOB_RECURSE SVG_FILES_LIST RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "src/img
 # Find all JSON translation files
 file(GLOB_RECURSE JSON_FILES_LIST RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "src/qml/translations/*.json")
 
+# Find all JavaScript utility files
+file(GLOB_RECURSE JS_FILES_LIST RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "src/qml/utils/*.js")
+
 # Add QML module to the executable
 qt_add_qml_module(Wallet
  URI WalletModule
@@ -82,7 +85,7 @@ qt_add_qml_module(Wallet
  NO_CACHEGEN
  NO_LINT
  QML_FILES ${QML_FILES_LIST}
- RESOURCES ${SVG_FILES_LIST} ${JSON_FILES_LIST}
+ RESOURCES ${SVG_FILES_LIST} ${JSON_FILES_LIST} ${JS_FILES_LIST}
 )
 target_link_libraries(Wallet PRIVATE
  Qt6::Core
