Improve Node.js initialization and JS resource loading
• Refactor NodeJS to use an InitState enum with QMutex/QWaitCondition for proper state management and waiting during async initialization.
• Enhance error reporting in NodeThread: add “initializationFailed” signal, better debug logs, and robust handling in loadJSEntryPoint.
• Update JS bootstrap code to support both Qt resource (QRC) and filesystem sources with a custom require wrapper for QRC loading.
• Add a new V8 callback (loadFromQrc) to support dynamic module loading via Qt resources.
• Modify CMakeLists.txt to include additional JavaScript utility files for proper resource packaging.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,14 +74,16 @@ target_include_directories(Wallet PRIVATE
 # Automatically find all QML files with relative paths
 file(GLOB_RECURSE QML_FILES_LIST RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "src/qml/*.qml")
 
+# Find all JavaScript utility files
+file(GLOB_RECURSE JS_FILES_LIST RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "src/qml/utils/*.js")
+
 # Find all SVG files in img directory
 file(GLOB_RECURSE SVG_FILES_LIST RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "src/img/*.svg")
 
 # Find all JSON translation files
 file(GLOB_RECURSE JSON_FILES_LIST RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "src/qml/translations/*.json")
 
-# Find all JavaScript utility files
-file(GLOB_RECURSE JS_FILES_LIST RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "src/qml/*")
+file(GLOB_RECURSE NODE_FILES_LIST RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "src/js/*")
 
 # Add QML module to the executable
 qt_add_qml_module(Wallet
@@ -91,7 +93,7 @@ qt_add_qml_module(Wallet
  NO_CACHEGEN
  NO_LINT
  QML_FILES ${QML_FILES_LIST}
- RESOURCES ${SVG_FILES_LIST} ${JSON_FILES_LIST} ${JS_FILES_LIST}
+ RESOURCES ${SVG_FILES_LIST} ${JSON_FILES_LIST} ${JS_FILES_LIST} ${NODE_FILES_LIST}
 )
 target_link_libraries(Wallet PRIVATE
  Qt6::Core
