--- a/src/js/package.json
+++ b/src/js/package.json
@@ -1,19 +1,11 @@
 {
-  "name": "matchbox-wallet-js",
-  "version": "1.0.0",
-  "description": "JavaScript runtime for Matchbox Wallet",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "wallet",
-    "embedded",
-    "node"
-  ],
-  "author": "LiberSoft",
-  "license": "ISC",
-  "dependencies": {
-    "ethers": "^6.15.0"
-  }
+	"name": "matchbox-wallet-js",
+	"version": "1.0.0",
+	"description": "JavaScript runtime for Matchbox Wallet",
+	"author": "LiberSoft",
+	"license": "Unlicense",
+	"main": "index.js",
+	"dependencies": {
+		"ethers": "^6.15.0"
+	}
 }
