Move battery manager from C++ to node

--- a/src/js/package.json
+++ b/src/js/package.json
@@ -6,6 +6,7 @@
 	"license": "Unlicense",
 	"main": "index.js",
 	"dependencies": {
-		"ethers": "^6.15.0"
+		"ethers": "^6.15.0",
+		"systeminformation": "^5.27.7"
 	}
 }
