--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,8 +44,8 @@
 	"[qml]": {
 		"editor.defaultFormatter": "Delgan.qml-format",
 		"editor.formatOnSave": true,
-		"editor.formatOnType": true,
-		"editor.formatOnPaste": true,
+		"editor.formatOnType": false,
+		"editor.formatOnPaste": false,
 		"editor.autoIndent": "full",
 		"editor.tabSize": 1,
 		"editor.insertSpaces": false
