--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,51 +2,63 @@ cmake_minimum_required(VERSION 3.16)
 project(Wallet VERSION 1.0.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# Option to enable/disable Node.js integration
+option(ENABLE_NODEJS "Enable Node.js integration" ON)
+
 find_package(Qt6 REQUIRED COMPONENTS Core Quick Svg)
 find_package(Qt6 QUIET COMPONENTS Multimedia)
 
-find_path(NODEJS_INCLUDE_DIR
-	NAMES node.h
-	HINTS /usr/include/node /usr/local/include/node /opt/homebrew/include/node
-	PATH_SUFFIXES nodejs node
-)
+# Node.js integration (conditional)
+if(ENABLE_NODEJS)
+	find_path(NODEJS_INCLUDE_DIR
+		NAMES node.h
+		HINTS /usr/include/node /usr/local/include/node /opt/homebrew/include/node
+		PATH_SUFFIXES nodejs node
+	)
 
-find_library(NODEJS_LIBRARY 
-	NAMES node libnode
-	HINTS /usr/lib /usr/local/lib /opt/homebrew/lib
-	PATH_SUFFIXES x86_64-linux-gnu
-)
+	find_library(NODEJS_LIBRARY 
+		NAMES node libnode
+		HINTS /usr/lib /usr/local/lib /opt/homebrew/lib
+		PATH_SUFFIXES x86_64-linux-gnu
+	)
 
-find_library(V8_LIBRARY 
-	NAMES v8 libv8
-	HINTS /usr/lib /usr/local/lib /opt/homebrew/lib
-	PATH_SUFFIXES x86_64-linux-gnu
-)
+	find_library(V8_LIBRARY 
+		NAMES v8 libv8
+		HINTS /usr/lib /usr/local/lib /opt/homebrew/lib
+		PATH_SUFFIXES x86_64-linux-gnu
+	)
 
-find_library(V8_LIBBASE_LIBRARY 
-	NAMES v8_libbase libv8_libbase
-	HINTS /usr/lib /usr/local/lib /opt/homebrew/lib
-	PATH_SUFFIXES x86_64-linux-gnu
-)
+	find_library(V8_LIBBASE_LIBRARY 
+		NAMES v8_libbase libv8_libbase
+		HINTS /usr/lib /usr/local/lib /opt/homebrew/lib
+		PATH_SUFFIXES x86_64-linux-gnu
+	)
 
-find_library(V8_LIBPLATFORM_LIBRARY 
-	NAMES v8_libplatform libv8_libplatform
-	HINTS /usr/lib /usr/local/lib /opt/homebrew/lib
-	PATH_SUFFIXES x86_64-linux-gnu
-)
+	find_library(V8_LIBPLATFORM_LIBRARY 
+		NAMES v8_libplatform libv8_libplatform
+		HINTS /usr/lib /usr/local/lib /opt/homebrew/lib
+		PATH_SUFFIXES x86_64-linux-gnu
+	)
 
-find_library(UV_LIBRARY 
-	NAMES uv libuv
-	HINTS /usr/lib /usr/local/lib /opt/homebrew/lib
-	PATH_SUFFIXES x86_64-linux-gnu
-)
+	find_library(UV_LIBRARY 
+		NAMES uv libuv
+		HINTS /usr/lib /usr/local/lib /opt/homebrew/lib
+		PATH_SUFFIXES x86_64-linux-gnu
+	)
 
-if(NOT NODEJS_INCLUDE_DIR OR NOT NODEJS_LIBRARY)
-	message(FATAL_ERROR "Node.js development files not found. Please install nodejs-dev or libnode-dev package.")
+	if(NOT NODEJS_INCLUDE_DIR OR NOT NODEJS_LIBRARY)
+		message(FATAL_ERROR "Node.js development files not found. Please install nodejs-dev or libnode-dev package.")
+	endif()
+
+	message(STATUS "Found Node.js headers: ${NODEJS_INCLUDE_DIR}")
+	message(STATUS "Found Node.js library: ${NODEJS_LIBRARY}")
+	
+	# Define ENABLE_NODEJS macro for C++ code
+	add_compile_definitions(ENABLE_NODEJS)
+else()
+	message(STATUS "Node.js integration disabled")
 endif()
-
-message(STATUS "Found Node.js headers: ${NODEJS_INCLUDE_DIR}")
-message(STATUS "Found Node.js library: ${NODEJS_LIBRARY}")
 
 # TODO: Felgo doesnt work on ARM
 #find_package(FelgoHotReload REQUIRED)
@@ -54,18 +66,28 @@ message(STATUS "Found Node.js library: ${NODEJS_LIBRARY}")
 
 set(QT_QML_GENERATE_QMLLS_INI ON)
 qt_standard_project_setup()
-qt_add_executable(Wallet
+# Source files - Always include node.h and node.cpp for Qt MOC
+# Node thread files are conditional
+set(WALLET_SOURCES 
 	src/main.cpp
 	src/include/node.h
 	src/node.cpp
-	src/include/node_thread.h
-	src/node_thread.cpp
 )
+if(ENABLE_NODEJS)
+	list(APPEND WALLET_SOURCES 
+		src/include/node_thread.h
+		src/node_thread.cpp
+	)
+endif()
 
-target_include_directories(Wallet PRIVATE
-	src
-	${NODEJS_INCLUDE_DIR}
-)
+qt_add_executable(Wallet ${WALLET_SOURCES})
+
+target_include_directories(Wallet PRIVATE src)
+
+# Add Node.js include directories conditionally
+if(ENABLE_NODEJS)
+	target_include_directories(Wallet PRIVATE ${NODEJS_INCLUDE_DIR})
+endif()
 
 # Automatically find all QML files with relative paths
 file(GLOB_RECURSE QML_FILES_LIST RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "src/qml/*.qml")
@@ -93,18 +115,23 @@ qt_add_qml_module(Wallet
 # Find Node.js entry files and include all node_modules
 file(GLOB_RECURSE NODE_MODULES_FILES_LIST RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "src/js/node_modules/**/*.js")
 
-# Node.js files are now loaded directly from filesystem
-# No QRC resources needed
+# Basic Qt libraries
 target_link_libraries(Wallet PRIVATE
 	Qt6::Core
 	Qt6::Quick
 	Qt6::Svg
-	${NODEJS_LIBRARY}
-	${V8_LIBRARY}
-	${V8_LIBBASE_LIBRARY}
-	${V8_LIBPLATFORM_LIBRARY}
-	${UV_LIBRARY}
 )
+
+# Link Node.js libraries conditionally
+if(ENABLE_NODEJS)
+	target_link_libraries(Wallet PRIVATE
+		${NODEJS_LIBRARY}
+		${V8_LIBRARY}
+		${V8_LIBBASE_LIBRARY}
+		${V8_LIBPLATFORM_LIBRARY}
+		${UV_LIBRARY}
+	)
+endif()
 
 # Link Qt6::Multimedia if available
 if(TARGET Qt6::Multimedia)
