--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,15 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
+    - name: Setup ARM64 cross-compilation environment
+      run: |
+        sudo dpkg --add-architecture arm64
+        sudo apt-get update
+        sudo apt-get install -y \
+          crossbuild-essential-arm64 \
+          g++-aarch64-linux-gnu \
+          gcc-aarch64-linux-gnu
+    
     - name: Make build script executable
       run: chmod +x build-arm64.sh
     
