--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
           crossbuild-essential-arm64 \
           gcc-aarch64-linux-gnu \
           g++-aarch64-linux-gnu \
-          pkgconf-aarch64-linux-gnu \
+          pkgconf
           cmake ninja-build
 
     - name: Make build script executable
