--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,12 +60,19 @@ jobs:
         sudo apt remove firefox snapd apache2 "dotnet*"
         
         sudo apt-get dist-upgrade -y
+        
+        # Install base cross-compilation tools first
         sudo apt-get install -y \
           crossbuild-essential-arm64 \
           gcc-aarch64-linux-gnu \
           g++-aarch64-linux-gnu \
           pkgconf \
           cmake ninja-build
+          
+        # Install ARM64 glib development dependencies to fix broken package issues
+        sudo apt-get install -y \
+          libglib2.0-dev-bin:arm64 \
+          libglib2.0-dev-bin-linux:arm64
 
     - name: Make build script executable
       run: chmod +x build-arm64.sh
